--- a/src/app/layout/default/header/header.component.html
+++ b/src/app/layout/default/header/header.component.html
@@ -23,40 +23,40 @@
       </div>
     </li>
     <!-- Github Page -->
-    <li>
+    <!-- <li>
       <a class="alain-default__nav-item" href="//github.com/ng-alain/ng-alain" target="_blank">
         <i nz-icon nzType="github"></i>
       </a>
-    </li>
+    </li> -->
     <!-- Lock Page -->
-    <li class="hidden-mobile">
+    <!-- <li class="hidden-mobile">
       <div class="alain-default__nav-item" routerLink="/passport/lock">
         <i nz-icon nzType="lock"></i>
       </div>
-    </li>
+    </li> -->
     <!-- Search Button -->
-    <li class="hidden-pc" (click)="searchToggleChange()">
+    <!-- <li class="hidden-pc" (click)="searchToggleChange()">
       <div class="alain-default__nav-item">
         <i nz-icon nzType="search"></i>
       </div>
-    </li>
+    </li> -->
   </ul>
-  <header-search class="alain-default__search" [toggleChange]="searchToggleStatus"></header-search>
+  <!-- <header-search class="alain-default__search" [toggleChange]="searchToggleStatus"></header-search> -->
   <ul class="alain-default__nav">
     <!-- Notify -->
     <li>
       <header-notify></header-notify>
     </li>
     <!-- Task -->
-    <li class="hidden-mobile">
+    <!-- <li class="hidden-mobile">
       <header-task></header-task>
-    </li>
+    </li> -->
     <!-- App Icons -->
-    <li class="hidden-mobile">
+    <!-- <li class="hidden-mobile">
       <header-icon></header-icon>
-    </li>
+    </li> -->
     <!-- Settings -->
-    <li class="hidden-mobile">
+    <!-- <li class="hidden-mobile">
       <nz-dropdown nzTrigger="click" nzPlacement="bottomRight">
         <div class="alain-default__nav-item" nz-dropdown>
           <i nz-icon nzType="setting"></i>
@@ -73,7 +73,7 @@
           </div>
         </div>
       </nz-dropdown>
-    </li>
+    </li> -->
     <li class="hidden-mobile">
       <header-user></header-user>
     </li>
