--- a/src/app/layout/default/sidebar/sidebar.component.html
+++ b/src/app/layout/default/sidebar/sidebar.component.html
@@ -1,10 +1,12 @@
 <div class="alain-default__aside-inner">
   <nz-dropdown nzTrigger="click" class="alain-default__aside-user">
     <div nz-dropdown class="user-block-dropdown">
-      <nz-avatar class="alain-default__aside-user-avatar" [nzSrc]="settings.user.avatar"></nz-avatar>
+      <!-- <nz-avatar class="alain-default__aside-user-avatar" [nzSrc]="settings.user.avatar"></nz-avatar> -->
       <div class="alain-default__aside-user-info">
-        <strong>{{ settings.user.name }}</strong>
-        <p class="text-truncate mb0">{{ settings.user.email }}</p>
+        <p class="text-nowrap mb0">
+          <strong>{{ settings.user.name }}</strong>
+        </p>
+        <p class="text-nowrap mb0">{{ settings.user.email }}</p>
       </div>
     </div>
     <ul nz-menu>
