--- a/src/app/layout/passport/passport.component.html
+++ b/src/app/layout/passport/passport.component.html
@@ -1,17 +1,16 @@
 <div class="container">
-  <header-i18n showLangText="false" class="langs"></header-i18n>
   <div class="wrap">
     <div class="top">
       <div class="head">
         <img class="logo" src="./assets/logo-color.svg" />
-        <span class="title">ng-alain</span>
+        <span class="title">CMS LBH</span>
       </div>
-      <div class="desc">武林中最有影响力的《葵花宝典》；欲练神功，挥刀自宫</div>
+      <div class="desc">Case Management System</div>
     </div>
     <router-outlet></router-outlet>
-    <global-footer [links]="links">
+    <global-footer>
       Copyright
-      <i nz-icon nzType="copyright"></i> 2017 <a href="//github.com/cipchk" target="_blank">卡色</a>出品
+      <i nz-icon nzType="copyright"></i> 2019 LBH Jakarta
     </global-footer>
   </div>
 </div>
