--- a/src/app/routes/dashboard/v1/v1.component.html
+++ b/src/app/routes/dashboard/v1/v1.component.html
@@ -4,7 +4,8 @@
     <small>Welcome !</small>
   </h1>
 </div>
-<quick-menu>
+<app-list-person [parent]="true"></app-list-person>
+<!-- <quick-menu>
   <nz-list [nzBordered]="false" [nzSplit]="false">
     <nz-list-item>
       <a routerLink="/">Home</a>
@@ -22,7 +23,7 @@
       <a routerLink="/pro/result/success">success result</a>
     </nz-list-item>
   </nz-list>
-</quick-menu>
+</quick-menu> -->
 <div nz-row nzGutter="16">
   <div nz-col nzXs="24" nzSm="12" nzMd="6" class="mb-md">
     <div nz-row nzType="flex" nzAlign="middle" class="bg-primary rounded-md">
