--- a/src/app/routes/passport/login/login.component.html
+++ b/src/app/routes/passport/login/login.component.html
@@ -8,62 +8,18 @@
             <input nz-input formControlName="userName" placeholder="username: admin or user" />
           </nz-input-group>
           <nz-form-explain *ngIf="userName.dirty && userName.errors">
-            {{ 'Please enter mobile number!' | translate }}
+            {{ 'Please enter email!' | translate }}
           </nz-form-explain>
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
         <nz-form-control>
           <nz-input-group nzSize="large" nzPrefixIcon="lock">
-            <input nz-input type="password" formControlName="password" placeholder="password: ng-alain.com" />
+            <input nz-input type="password" formControlName="password" placeholder="password: lbhjakarta" />
           </nz-input-group>
           <nz-form-explain *ngIf="password.dirty && password.errors">
             {{ 'Please enter password!' | translate }}
           </nz-form-explain>
-        </nz-form-control>
-      </nz-form-item>
-    </nz-tab>
-    <nz-tab [nzTitle]="'app.login.tab-login-mobile' | translate">
-      <nz-form-item>
-        <nz-form-control>
-          <nz-input-group nzSize="large" nzPrefixIcon="user">
-            <input nz-input formControlName="mobile" placeholder="mobile number" />
-          </nz-input-group>
-          <nz-form-explain *ngIf="mobile.dirty && mobile.errors">
-            <ng-container *ngIf="mobile.errors.required">
-              {{ 'validation.phone-number.required' | translate }}
-            </ng-container>
-            <ng-container *ngIf="mobile.errors.pattern">
-              {{ 'validation.phone-number.wrong-format' | translate }}
-            </ng-container>
-          </nz-form-explain>
-        </nz-form-control>
-      </nz-form-item>
-      <nz-form-item>
-        <nz-form-control>
-          <nz-row [nzGutter]="8">
-            <nz-col [nzSpan]="16">
-              <nz-input-group nzSize="large" nzPrefixIcon="mail">
-                <input nz-input formControlName="captcha" placeholder="captcha" />
-              </nz-input-group>
-              <nz-form-explain *ngIf="captcha.dirty && captcha.errors">
-                {{ 'validation.verification-code.required' | translate }}
-              </nz-form-explain>
-            </nz-col>
-            <nz-col [nzSpan]="8">
-              <button
-                type="button"
-                nz-button
-                nzSize="large"
-                (click)="getCaptcha()"
-                [disabled]="count"
-                nzBlock
-                [nzLoading]="http.loading"
-              >
-                {{ count ? count + 's' : ('app.register.get-verification-code' | translate) }}
-              </button>
-            </nz-col>
-          </nz-row>
         </nz-form-control>
       </nz-form-item>
     </nz-tab>
@@ -72,9 +28,6 @@
     <nz-col [nzSpan]="12">
       <label nz-checkbox formControlName="remember">{{ 'app.login.remember-me' | translate }}</label>
     </nz-col>
-    <nz-col [nzSpan]="12" class="text-right">
-      <a class="forgot" (click)="msg.error('请找欧阳锋')">{{ 'app.login.forgot-password' | translate }}</a>
-    </nz-col>
   </nz-form-item>
   <nz-form-item>
     <button nz-button type="submit" nzType="primary" nzSize="large" [nzLoading]="http.loading" nzBlock>
@@ -82,16 +35,3 @@
     </button>
   </nz-form-item>
 </form>
-<div class="other">
-  {{ 'app.login.sign-in-with' | translate }}
-  <i
-    nz-tooltip="in fact Auth0 via window"
-    (click)="open('auth0', 'window')"
-    nz-icon
-    nzType="alipay-circle"
-    class="icon"
-  ></i>
-  <i nz-tooltip="in fact Github via redirect" (click)="open('github')" nz-icon nzType="taobao-circle" class="icon"></i>
-  <i (click)="open('weibo', 'window')" nz-icon nzType="weibo-circle" class="icon"></i>
-  <a class="register" routerLink="/passport/register">{{ 'app.login.signup' | translate }}</a>
-</div>
