--- a/src/app/routes/passport/register/register.component.html
+++ b/src/app/routes/passport/register/register.component.html
@@ -7,20 +7,16 @@
         <input nz-input formControlName="mail" placeholder="Email" />
       </nz-input-group>
       <ng-container *ngIf="mail.dirty && mail.errors">
-        <nz-form-explain *ngIf="mail.errors?.required">{{ 'validation.email.required' | translate }}</nz-form-explain>
-        <nz-form-explain *ngIf="mail.errors?.email">{{ 'validation.email.wrong-format' | translate }}</nz-form-explain>
+        <nz-form-explain *ngIf="!!mail.errors?.required">{{ 'validation.email.required' | translate }}</nz-form-explain>
+        <nz-form-explain *ngIf="!!mail.errors?.email">{{ 'validation.email.wrong-format' | translate }}
+        </nz-form-explain>
       </ng-container>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
     <nz-form-control>
-      <nz-popover
-        [nzPlacement]="'right'"
-        [nzTrigger]="'focus'"
-        [(nzVisible)]="visible"
-        nzOverlayClassName="register-password-cdk"
-        [nzOverlayStyle]="{ 'width.px': 240 }"
-      >
+      <nz-popover [nzPlacement]="'right'" [nzTrigger]="'focus'" [(nzVisible)]="visible"
+        nzOverlayClassName="register-password-cdk" [nzOverlayStyle]="{ 'width.px': 240 }">
         <nz-input-group nzSize="large" nz-popover nzAddonBeforeIcon="lock">
           <input nz-input type="password" formControlName="password" placeholder="Password" />
         </nz-input-group>
@@ -35,12 +31,8 @@
               <div *ngSwitchDefault class="error">{{ 'validation.password.strength.short' | translate }}</div>
             </ng-container>
             <div class="progress-{{ status }}">
-              <nz-progress
-                [nzPercent]="progress"
-                [nzStatus]="passwordProgressMap[status]"
-                [nzStrokeWidth]="6"
-                [nzShowInfo]="false"
-              ></nz-progress>
+              <nz-progress [nzPercent]="progress" [nzStatus]="passwordProgressMap[status]" [nzStrokeWidth]="6"
+                [nzShowInfo]="false"></nz-progress>
             </div>
             <p class="mt-sm">{{ 'validation.password.strength.msg' | translate }}</p>
           </div>
@@ -54,10 +46,10 @@
         <input nz-input type="password" formControlName="confirm" placeholder="Confirm Password" />
       </nz-input-group>
       <nz-form-explain *ngIf="confirm.dirty && confirm.errors">
-        <ng-container *ngIf="confirm.errors.required">
+        <ng-container *ngIf="!!confirm.errors.required">
           {{ 'validation.confirm-password.required' | translate }}
         </ng-container>
-        <ng-container *ngIf="confirm.errors.equar">
+        <ng-container *ngIf="!!confirm.errors.equar">
           {{ 'validation.password.twice' | translate }}
         </ng-container>
       </nz-form-explain>
@@ -75,10 +67,10 @@
         <input formControlName="mobile" nz-input placeholder="Phone number" />
       </nz-input-group>
       <nz-form-explain *ngIf="mobile.dirty && mobile.errors">
-        <ng-container *ngIf="mobile.errors.required">
+        <ng-container *ngIf="!!mobile.errors.required">
           {{ 'validation.phone-number.required' | translate }}
         </ng-container>
-        <ng-container *ngIf="mobile.errors.pattern">
+        <ng-container *ngIf="!!mobile.errors.pattern">
           {{ 'validation.phone-number.wrong-format' | translate }}
         </ng-container>
       </nz-form-explain>
@@ -96,15 +88,8 @@
           </nz-form-explain>
         </nz-col>
         <nz-col [nzSpan]="8">
-          <button
-            type="button"
-            nz-button
-            nzSize="large"
-            (click)="getCaptcha()"
-            [disabled]="count"
-            nzBlock
-            [nzLoading]="http.loading"
-          >
+          <button type="button" nz-button nzSize="large" (click)="getCaptcha()" [disabled]="count" nzBlock
+            [nzLoading]="http.loading">
             {{ count ? count + 's' : ('app.register.get-verification-code' | translate) }}
           </button>
         </nz-col>
