--- a/src/app/routes/form/person/list-person/list-person.component.html
+++ b/src/app/routes/form/person/list-person/list-person.component.html
@@ -17,17 +17,6 @@
             <nz-form-control>
               <input nz-input [(ngModel)]="q.nomorId" name="nomorId" placeholder="no id" id="nomorId" />
             </nz-form-control>
-            <!-- <nz-form-control>
-            <nz-select
-              [(ngModel)]="q.status"
-              name="status"
-              id="status"
-              [nzPlaceHolder]="'请选择'"
-              [nzShowSearch]="true"
-            >
-              <nz-option *ngFor="let i of status; let idx = index" [nzLabel]="i.text" [nzValue]="idx"></nz-option>
-            </nz-select>
-          </nz-form-control> -->
           </nz-form-item>
         </div>
         <div nz-col nzMd="8" nzSm="24" *ngIf="expandForm">
@@ -35,32 +24,6 @@
             <nz-form-label nzFor="callNo">No Reg</nz-form-label>
             <nz-form-control>
               <input nz-input id="callNo" />
-            </nz-form-control>
-          </nz-form-item>
-        </div>
-        <div nz-col nzMd="8" nzSm="24" *ngIf="expandForm">
-          <nz-form-item>
-            <nz-form-label nzFor="updatedAt">No Reg</nz-form-label>
-            <nz-form-control> </nz-form-control>
-          </nz-form-item>
-        </div>
-        <div nz-col nzMd="8" nzSm="24" *ngIf="expandForm">
-          <nz-form-item>
-            <nz-form-label nzFor="status2">No Reg</nz-form-label>
-            <nz-form-control>
-              <nz-select [nzPlaceHolder]="'请选择'" nzId="status2" [nzShowSearch]="true">
-                <nz-option *ngFor="let i of status; let idx = index" [nzLabel]="i.text" [nzValue]="idx"></nz-option>
-              </nz-select>
-            </nz-form-control>
-          </nz-form-item>
-        </div>
-        <div nz-col nzMd="8" nzSm="24" *ngIf="expandForm">
-          <nz-form-item>
-            <nz-form-label nzFor="status3">No Reg</nz-form-label>
-            <nz-form-control>
-              <nz-select [nzPlaceHolder]="'请选择'" nzId="status3" [nzShowSearch]="true">
-                <nz-option *ngFor="let i of status; let idx = index" [nzLabel]="i.text" [nzValue]="idx"></nz-option>
-              </nz-select>
             </nz-form-control>
           </nz-form-item>
         </div>
@@ -80,29 +43,6 @@
         <span>New</span>
       </button>
     </div>
-    <!-- <ng-container *ngIf="selectedRows.length > 0">
-    <button nz-button>批量操作</button>
-    <nz-dropdown [nzPlacement]="'bottomLeft'">
-      <button nz-button nz-dropdown>
-        更多操作
-        <i nz-icon nzType="down"></i>
-      </button>
-      <ul nz-menu>
-        <li nz-menu-item (click)="remove()">删除</li>
-        <li nz-menu-item (click)="approval()">批量审批</li>
-      </ul>
-    </nz-dropdown>
-  </ng-container> -->
-    <!-- <div class="my-md">
-    <nz-alert [nzType]="'info'" [nzShowIcon]="true" [nzMessage]="message">
-      <ng-template #message>
-        已选择
-        <strong class="text-primary">{{ selectedRows.length }}</strong> 项&nbsp;&nbsp; 服务调用总计
-        <strong>{{ totalCallNo }}</strong> 万
-        <a *ngIf="totalCallNo > 0" (click)="st.clearCheck()" class="ml-lg">清空</a>
-      </ng-template>
-    </nz-alert>
-  </div> -->
     <st #st [columns]="columns" [data]="data" [loading]="loading" (change)="stChange($event)">
       <ng-template st-row="status" let-i>
         <nz-badge [nzStatus]="i.statusType" [nzText]="i.statusText"></nz-badge>
@@ -111,11 +51,6 @@
   </nz-card>
 </div>
 <ng-template #modalContent>
-  <!-- <nz-form-item>
-    <nz-form-label nzFor="no">描述</nz-form-label>
-    <nz-form-control>
-      <input nz-input [(ngModel)]="description" name="description" placeholder="请输入" id="no" />
-    </nz-form-control>
-  </nz-form-item> -->
-  <app-create-person [parent]="true" (saveDone)="closeModal($event)"></app-create-person>
+  <app-create-person [parent]="true" [create]="create" [editData]="dataSelected" (saveDone)="closeModal($event)">
+  </app-create-person>
 </ng-template>
