save create application done, update not yet

--- a/src/app/routes/form/person/list-person/list-person.component.html
+++ b/src/app/routes/form/person/list-person/list-person.component.html
@@ -51,6 +51,6 @@
   </nz-card>
 </div>
 <ng-template #modalContent>
-  <app-create-person [parent]="true" [create]="create" [editData]="dataSelected" (saveDone)="closeModal($event)">
+  <app-create-person [parent]="true" [mode]="mode" [editData]="dataSelected" (saveDone)="closeModal($event)">
   </app-create-person>
 </ng-template>
