--- a/src/app/routes/form/application/create-application/create-application.component.html
+++ b/src/app/routes/form/application/create-application/create-application.component.html
@@ -16,6 +16,27 @@
         </div>
         <st #st [columns]="columns" [data]="clientData"> </st>
       </ng-template>
+      <ng-template sf-template="wakilId" let-me let-ui="ui" let-schema="schema">
+        <button
+          type="button"
+          [disabled]="mode === 'edit'"
+          nz-button
+          nzType="dashed"
+          nzSize="default"
+          (click)="createModal(listPerson, 'Pilih Wakil')"
+          nzSearch
+        >
+          Search
+        </button>
+        <input
+          *ngIf="me.formProperty.value"
+          nz-input
+          [attr.id]="me.id"
+          [readonly]="me.disabled"
+          [nzSize]="ui.size"
+          [ngModel]="me.formProperty.value.namaLengkap"
+        />
+      </ng-template>
     </sf>
   </nz-card>
 </div>
@@ -23,7 +44,11 @@
   <app-create-client
     [parent]="true"
     [mode]="mode"
-    [editData]="editData"
+    [editData]="modalEditData"
     (saveData)="saveClient($event)"
   ></app-create-client>
+</ng-template>
+
+<ng-template #listPerson>
+  <app-list-person [parent]="true" (dataPerson)="closeModalAndSaveData($event)"></app-list-person>
 </ng-template>
