--- a/src/app/routes/form/consultation-queue/consultation-queue.component.html
+++ b/src/app/routes/form/consultation-queue/consultation-queue.component.html
@@ -37,7 +37,7 @@
         </div>
       </div>
     </form>
-    <st #st [columns]="columns" [data]="data" [loading]="loading" (change)="stChange($event)">
+    <st #st [columns]="columns" [data]="data" [loading]="loading">
       <ng-template st-row="status" let-i>
         <nz-badge [nzStatus]="i.statusType" [nzText]="i.statusText"></nz-badge>
       </ng-template>
