--- a/src/app/routes/form/case/list-case/list-case.component.html
+++ b/src/app/routes/form/case/list-case/list-case.component.html
@@ -1,3 +1,51 @@
-<p>
-  list-case works!
-</p>
+<page-header *ngIf="!parent" [title]="'Daftar Kasus'"></page-header>
+<div #card>
+  <nz-card [nzBordered]="false">
+    <form nz-form [nzLayout]="'inline'" (ngSubmit)="getData()" class="search__form">
+      <div nz-row [nzGutter]="{ xs: 8, sm: 8, md: 8, lg: 24, xl: 48, xxl: 48 }">
+        <div nz-col nzMd="8" nzSm="24">
+          <nz-form-item>
+            <nz-form-label nzFor="namaLengkap">Nama</nz-form-label>
+            <nz-form-control>
+              <input nz-input [(ngModel)]="q.namaLengkap" name="namaLengkap" placeholder="nama" id="namaLengkap" />
+            </nz-form-control>
+          </nz-form-item>
+        </div>
+        <div nz-col nzMd="8" nzSm="24">
+          <nz-form-item>
+            <nz-form-label nzFor="nomorId">Nomor Id</nz-form-label>
+            <nz-form-control>
+              <input nz-input [(ngModel)]="q.nomorId" name="nomorId" placeholder="no id" id="nomorId" />
+            </nz-form-control>
+          </nz-form-item>
+        </div>
+        <div nz-col nzMd="8" nzSm="24" *ngIf="expandForm">
+          <nz-form-item>
+            <nz-form-label nzFor="callNo">No Reg</nz-form-label>
+            <nz-form-control>
+              <input nz-input id="callNo" />
+            </nz-form-control>
+          </nz-form-item>
+        </div>
+        <div nz-col [nzSpan]="expandForm ? 24 : 8" [class.text-right]="expandForm">
+          <button nz-button type="submit" [nzType]="'primary'" [nzLoading]="loading">Search</button>
+          <button nz-button type="reset" (click)="reset()" class="mx-sm">Reset</button>
+          <a (click)="expandForm = !expandForm">
+            {{ expandForm ? 'Hide' : 'Expand' }}
+            <i nz-icon [nzType]="expandForm ? 'up' : 'down'"></i>
+          </a>
+        </div>
+      </div>
+    </form>
+
+    <st #st [columns]="columns" [data]="data" [loading]="loading" (change)="stChange($event)">
+      <ng-template st-row="status" let-i>
+        <nz-badge [nzStatus]="i.statusType" [nzText]="i.statusText"></nz-badge>
+      </ng-template>
+    </st>
+  </nz-card>
+</div>
+
+<ng-template #modalContent>
+  <app-view-case [parent]="true" [caseParam]="caseParam"></app-view-case>
+</ng-template>
