--- a/src/app/routes/passport/login/login.component.html
+++ b/src/app/routes/passport/login/login.component.html
@@ -5,7 +5,7 @@
       <nz-form-item>
         <nz-form-control>
           <nz-input-group nzSize="large" nzPrefixIcon="user">
-            <input nz-input formControlName="userName" placeholder="username: resepsionis@gmail.com" />
+            <input nz-input formControlName="userName" placeholder="email" />
           </nz-input-group>
           <nz-form-explain *ngIf="userName.dirty && userName.errors">
             {{ 'Please enter email!' | translate }}
@@ -15,7 +15,7 @@
       <nz-form-item>
         <nz-form-control>
           <nz-input-group nzSize="large" nzPrefixIcon="lock">
-            <input nz-input type="password" formControlName="password" placeholder="password: resepsionis" />
+            <input nz-input type="password" formControlName="password" placeholder="password" />
           </nz-input-group>
           <nz-form-explain *ngIf="password.dirty && password.errors">
             {{ 'Please enter password!' | translate }}
@@ -24,11 +24,11 @@
       </nz-form-item>
     </nz-tab>
   </nz-tabset>
-  <nz-form-item>
+  <!-- <nz-form-item>
     <nz-col [nzSpan]="12">
       <label nz-checkbox formControlName="remember">{{ 'app.login.remember-me' | translate }}</label>
     </nz-col>
-  </nz-form-item>
+  </nz-form-item> -->
   <nz-form-item>
     <button nz-button type="submit" nzType="primary" nzSize="large" [nzLoading]="http.loading" nzBlock>
       {{ 'app.login.login' | translate }}
