--- a/src/app/layout/passport/passport.component.html
+++ b/src/app/layout/passport/passport.component.html
@@ -8,9 +8,9 @@
       <div class="desc">Case Management System</div>
     </div>
     <router-outlet></router-outlet>
-    <global-footer>
+    <!-- <global-footer>
       Copyright
       <i nz-icon nzType="copyright"></i> 2019 LBH Jakarta
-    </global-footer>
+    </global-footer> -->
   </div>
 </div>
