--- a/src/app/routes/form/consultation-queue/consultation-queue.component.html
+++ b/src/app/routes/form/consultation-queue/consultation-queue.component.html
@@ -37,7 +37,14 @@
         </div>
       </div>
     </form>
-    <st #st [columns]="columns" [data]="data" [loading]="loading">
+    <st
+      #st
+      [widthMode]="{ type: 'strict', strictBehavior: 'wrap' }"
+      [columns]="columns"
+      [data]="data"
+      [loading]="loading"
+      [scroll]="{ x: '1064px' }"
+    >
       <ng-template st-row="status" let-i>
         <nz-badge [nzStatus]="i.statusType" [nzText]="i.statusText"></nz-badge>
       </ng-template>
