--- a/src/app/routes/form/referral-queue/referral-queue.component.html
+++ b/src/app/routes/form/referral-queue/referral-queue.component.html
@@ -1,4 +1,4 @@
-<page-header *ngIf="!parent" [title]="'Rekomendasi Kasus'"></page-header>
+<page-header *ngIf="!parent" [title]="'Rekomendasi Referral'"></page-header>
 <div #card>
   <nz-card [nzBordered]="false">
     <form nz-form [nzLayout]="'inline'" (ngSubmit)="getData()" class="search__form">
@@ -38,7 +38,7 @@
       </div>
     </form>
     <div class="my-md">
-      <button nz-button (click)="add(modalContent, 'Buat Baru Rekomendasi')" [nzType]="'primary'">
+      <button nz-button (click)="addPP(modalContent, 'Buat Baru Rekomendasi')" [nzType]="'primary'">
         <i nz-icon nzType="plus"></i>
         <span>New</span>
       </button>
@@ -74,12 +74,12 @@
         Search
       </button>
       <sv-container size="Large" col="1" layout="vertical">
-        <sv label="No Registrasi">{{ me.formProperty.value?.application.noReg }}</sv>
-        <sv label="Judul Kasus">{{ me.formProperty.value?.judulKasus }}</sv>
-        <sv label="Klien">{{ listClient(me.formProperty.value?.application.clients) }}</sv>
+        <sv label="No Registrasi">{{ editDataTemp?.application.noReg }}</sv>
+        <sv label="Judul Kasus">{{ editDataTemp?.judulKasus }}</sv>
+        <sv label="Klien">{{ listClient(editDataTemp?.application.clients) }}</sv>
         <sv label="Deskripsi Kasus"
-          ><div *ngIf="me.formProperty.value?.kronologiKasus">
-            <pre> {{ me.formProperty.value?.kronologiKasus }}</pre>
+          ><div *ngIf="editDataTemp?.kronologiKasus">
+            <pre> {{ editDataTemp?.kronologiKasus }}</pre>
           </div>
         </sv>
       </sv-container>
@@ -122,9 +122,7 @@
         <sv label="Tgl Request">{{ momentF(editDataKabid.tglRequest).format('DD/MM/YYYY HH:mm') }}</sv>
         <sv label="Rekomendasi Dari">{{ editDataKabid.requestBy.name }}</sv>
         <sv label="Rekomendasi">{{ editDataKabid.jenisRequestTeks }}</sv>
-        <div *ngIf="editDataKabid.jenisRequest === '5111'">
-          <sv label="Transfer Ke">{{ editDataKabid.networkId?.name }}</sv>
-        </div>
+        <sv label="Referral Ke">{{ editDataKabid.networkId.name }}</sv>
         <sv label="Alasan"
           ><div *ngIf="editDataKabid.isiRequest">
             <pre>{{ editDataKabid.isiRequest }}</pre>
