--- a/src/app/routes/form/user/list-user/list-user.component.html
+++ b/src/app/routes/form/user/list-user/list-user.component.html
@@ -43,7 +43,14 @@
         <span>New</span>
       </button>
     </div>
-    <st #st [columns]="columns" [data]="data" [loading]="loading">
+    <st
+      #st
+      [columns]="columns"
+      [widthMode]="{ type: 'strict', strictBehavior: 'wrap' }"
+      [data]="data"
+      [loading]="loading"
+      [scroll]="{ x: '1300px' }"
+    >
       <ng-template st-row="status" let-i>
         <nz-badge [nzStatus]="i.statusType" [nzText]="i.statusText"></nz-badge>
       </ng-template>
